--- a/src/main/resources/static/css/register.css
+++ b/src/main/resources/static/css/register.css
@@ -1,4 +1,4 @@
-.form-container {
+{
   max-width: 400px;
   margin: 0 auto;
   padding: 20px;
@@ -7,29 +7,29 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
-.form-container h2 {
+h2 {
   text-align: center;
   margin-bottom: 20px;
 }
 
-.form-group {
+{
   margin-bottom: 15px;
 }
 
-.form-group label {
+label {
   display: block;
   margin-bottom: 5px;
   font-weight: bold;
 }
 
-.form-group input {
+input {
   width: 100%;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 3px;
 }
 
-.form-group button {
+button {
   width: 100%;
   padding: 10px;
   background-color: #4caf50;
