--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Registration</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/register.css">
+    <link rel="stylesheet" href="/static/css/register.css">
 </head>
 <body>
 <h1>Registration</h1>
 <form th:action="@{/register}" method="post">
+
     <div>
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required autofocus>
+        <input type="text" id="username" name="username" required autofocus th:action="if">
     </div>
     <div>
         <label for="password">Password:</label>
@@ -23,6 +24,7 @@
     <div>
         <input type="submit" value="Register">
     </div>
+
 </form>
 </body>
 </html>
